# tukay-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  fly.toml  pyproject.toml
apps/accounts/: apps.py  authentication.py  models.py  permissions.py  serializers.py
apps/accounts/migrations/: 0001_initial.py
apps/airdrops/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/airdrops/migrations/: 0001_initial.py  0002_airdrop_merkle_leaves.py
apps/crowdfunds/: apps.py
apps/giveaways/: apps.py  models.py  tasks.py
apps/tokens/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/tokens/migrations/: 0001_initial.py
common/: exceptions.py  models.py  views.py
conf/: asgi.py  settings.py  urls.py  wsgi.py
services/: trivia.py
services/evm/: client.py
services/evm/abis/: Airdrop.abi
