[tool.poetry]
name = "tukay"
version = "0.1.0"
description = ""
authors = ["Isaac Adewumi <ienioladewumi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14.0"
web3 = "^6.11.4"
gunicorn = "^21.2.0"
huey = "^2.5.0"
django-cors-headers = "^4.3.1"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ruff = "^0.1.6"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
